--- a/assets/skeleton.css
+++ b/assets/skeleton.css
@@ -132,7 +132,7 @@ body {
 /* Typography
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 h1, h2, h3, h4, h5, h6 {
-  margin-top: -30px;
+  margin-top: auto;
   margin-bottom: 2rem;
   font-weight: 600;
 }
